# lcl

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: lclConfig.cmake.in
examples/: embed_example.c
include/: lcl.h
src/: conformance_lib.lcl  conformance_smoke.lcl  hash-table.c  hash-table.h  lcl-api.c  lcl-cell.c  lcl-command.c  lcl-compile.h  lcl-dict.c  lcl-env.c  lcl-eval.c  lcl-eval.h  lcl-frame.c  lcl-interp.c  lcl-lex.h  lcl-list.c  lcl-main.c  lcl-ns.c  lcl-num.c  lcl-opaque.c  lcl-proc.c  lcl-program.c  lcl-ref.c  lcl-scan.c  lcl-stdlib.c  lcl-stdlib.h  lcl-str.c  lcl-str.h  lcl-string.c  lcl-values.h  lcl-word.c  str-compat.c  str-compat.h  test.lcl
test/: conformance_smoke.lcl  lcl-test.c  test.lcl
